--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+# Local .terraform directories and files
+**/.terraform/*
+.terraform*
+
+!.terraformrc
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Other important files
 terraform.tfvars
+authorized_key.json
+*/ssh-key/*
+cloud-init.yml
+nimda@*
+variables.tf.myexample
+.env
